apps/translator-client/overlays/production/translator-client-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translator-client
spec:
  rules:
    - host: transcribe.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: translator-client
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - transcribe.contextsuite.com
      secretName: star-contextsuite-com
